<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project Draw</string>
    <string name="btnColor">Color</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="black">Black</string>
    <string name="colorTitle">Choose Color</string>
    <string name="btnClear">Clear</string>
    <string name="btnUndo">Undo</string>
    <string name="btnRedo">Redo</string>
    <string name="btnWidth">Width</string>
    <string name="widthNormal">Normal</string>
    <string name="widthWide">Wide</string>
    <string name="widthXWide">Extra Wide</string>
    <string name="widthTitle">Select Width</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="fileName">File Name: </string>
    <string name="fileNameEmpty">File name cannot be empty</string>
    <string name="fileNameSaved">%s is saved</string>
    <string name="upload">Upload</string>
    <string name="selectBrush">Select Brush</string>
    <string name="btnShape">Shape</string>
    <string name="defaultColorSummary">Choose your default brush color</string>
    <string name="defaultColorTitle">Default brush color</string>
    <string name="defaultShapeSummary">Choose your default brush shap</string>
    <string name="defaultShapeTitle">Default brush shape</string>
    <string name="defaultWidthSummary">Choose your default brush width</string>
    <string name="defaultWidthTitle">Default brush width</string>
    <string name="defaultAaSummary">Anti Aliasing</string>
    <string name="defaultAaTitle">Anti Aliasing default</string>
    <string name="aaOn">On</string>
    <string name="aaOff">Off</string>
    <string name="menu_new">New</string>
    <string name="menu_import">Import</string>
    <string name="preferences">Preferences</string>
    <string name="showGallery">Show Gallery</string>
    <string name="send">Send</string>
    <string name="saveError">Error saving file</string>
    <string name="brushState">Brush State</string>
    <string name="stroke">Stroke</string>
    <string name="fill">Fill</string>
    <string name="shape">Shape</string>
    <string name="Line">Line</string>
    <string name="background">Background</string>
    <string name="defaultFillSummary">Fill default</string>
    <string name="defaultFillTitle">Choose your default fill</string>
    <string name="defaultBgColorSummary">Background color default</string>
    <string name="defaulBgColorTitle">Choose your background default color</string>
    <string name="selectBgColor">Select background color</string>
    <string name="selectColor">Select brush color</string>
    <string name="selectWidth">Select width</string>
    <string name="noFill">No Fill</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="newMessege">Your picture is not saved, Save first?</string>
    <string name="noSave">Don\'t save</string>
    <string name="exit">Exit</string>
    <string name="stay">Stay</string>
    <string name="btnSave">Save</string>
    <string name="exitMessege">Are you sure you want to exit?</string>
    <string name="exitSaveMessege">Your picture is not saved, Are you sure you want to exit?</string>
    <string name="selectSource">Choose Source</string>
    <string name="selectViewer">Select Picture Viewer</string>
    <string name="takePic">Take Picture</string>

</resources>