<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnUpload"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button"
            android:text="@string/upload" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnUndo"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/btnUndo" />

            <Button
                android:id="@+id/btnRedo"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:visibility="gone"
                android:text="@string/btnRedo" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button"
            android:text="@string/save" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#449def" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="50"
        layout="@layout/draw_window" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#449def" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btnBgColor"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:visibility="gone"
            android:text="@string/background" />

        <Button
            android:id="@+id/btnColor"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/btnColor" />

        <Button
            android:id="@+id/btnShape"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/btnShape" />

        <Button
            android:id="@+id/btnWidth"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/btnWidth" />
    </LinearLayout>

</LinearLayout>