<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnCancelBrush"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/tvBrush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/selectBrush"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#449def" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <Switch
            android:id="@+id/switchFill"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/fill"
            android:textOff="@string/noFill"
            android:textOn="@string/fill"
            android:layout_centerHorizontal="true"
             />

        <View
            android:id="@+id/viewAbove"
            android:layout_width="fill_parent"
            android:layout_height="4dip"
            android:background="#449def"
            android:layout_below="@id/switchFill" />

        <ImageView
            android:id="@+id/scircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/viewAbove" />

        <ImageView
            android:id="@+id/mcircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewAbove"
            android:layout_toRightOf="@id/scircle" />

        <ImageView
            android:id="@+id/lcircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewAbove"
            android:layout_toRightOf="@id/mcircle" />

        <ImageView
            android:id="@+id/ssquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/scircle" />

        <ImageView
            android:id="@+id/msquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/scircle"
            android:layout_toRightOf="@id/ssquare" />

        <ImageView
            android:id="@+id/lsquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/scircle"
            android:layout_toRightOf="@id/msquare" />

        <ImageView
            android:id="@+id/stri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/ssquare" />

        <ImageView
            android:id="@+id/mtri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ssquare"
            android:layout_toRightOf="@id/stri" />

        <ImageView
            android:id="@+id/ltri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ssquare"
            android:layout_toRightOf="@id/mtri" />
    </RelativeLayout>

</FrameLayout>